<resources>
    <string name="app_name">C196Tracker</string>
    <string name="terms_title">terms</string>
    <string name="courses_title">courses</string>
    <string name="notes_title">notes</string>
    <string name="add_term">ADD TERM</string>
    <string name="add_course">ADD COURSE</string>
    <string name="term_name">term name</string>
    <string name="term_start">term start</string>
    <string name="term_end">term end</string>
    <string name="select_date">select date</string>
    <string name="course_name">course name</string>
    <string name="course_start">course start</string>
    <string name="course_end">course end</string>
    <string name="note_content">note content</string>
    <string name="add_note">add note</string>
    <string name="snack_bar_text">snack bar text</string>
    <string name="snack_bar_undo">snack bar undo</string>
    <string name="spinner_term_prompt">Please select a term.</string>
    <string name="ok">OK</string>
    <string name="no_term_start_date">Please select a start date.</string>
    <string name="new_course_mentor">New Course Mentor</string>
    <string name="course_mentor_name">MENTOR NAME</string>
    <string name="course_mentor_email">MENTOR EMAIL</string>
    <string name="course_mentor_phone">MENTOR PHONE</string>
    <string name="course_mentor_phone_hint">MENTOR PHONE</string>
    <string name="course_mentor_email_hint">MENTOR EMAIL</string>
    <string name="course_mentor_name_hint">MENTOR NAME</string>
    <string name="add_mentor">ADD COURSE MENTOR</string>
    <string name="action_settings">action_settings</string>
    <string name="add_course_mentor">Add Course Mentor</string>
    <string name="go_to_courses">Go To Courses</string>
    <string name="go_to_assignments">Go To Assignments</string>
    <string name="go_to_notes">Go To Notes</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="active">ACTIVE</string>
    <string name="enter_course_name">Enter course name</string>
    <string name="assessment_name">Assessment name</string>
    <string name="due_date">due date</string>
    <string name="assessments">ASSESSMENTS</string>
    <string name="go_to_terms">Go To Terms</string>
    <string name="edit">Edit</string>
    <string name="edit_term">EDIT TERM</string>
    <string name="edit_course">EDIT COURSE</string>
    <string name="add_notification">Add Notification</string>
    <string name="add_start_notification">Add Start Notification</string>
    <string name="add_end_notification">Add End Notification</string>
    <string name="share_note">Share Note</string>
    <string name="notification_scheduled">Notification scheduled.</string>
    <string name="set_goal_alert">Set Goal Alert</string>
    <string name="add_goal">ADD GOAL</string>
    <string name="goal_content">Goal content</string>
    <string name="notes">NOTES</string>

</resources>
