<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/course_mentor_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/course_mentor_name"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course_mentor_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/course_mentor_name_hint"
        android:inputType="textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_mentor_name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_mentor_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/course_mentor_email"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@id/course_mentor_name_label"
        app:layout_constraintTop_toTopOf="@id/course_mentor_name_label" />

    <EditText
        android:id="@+id/course_mentor_email_editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/course_mentor_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/course_mentor_name_editText"
        app:layout_constraintTop_toBottomOf="@+id/course_mentor_name_editText" />

    <TextView
        android:id="@+id/course_mentor_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/course_mentor_phone"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@id/course_mentor_email_label"
        app:layout_constraintTop_toTopOf="@id/course_mentor_email_label" />

    <EditText
        android:id="@+id/course_mentor_phone_editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/course_mentor_phone_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/course_mentor_email_editText"
        app:layout_constraintTop_toBottomOf="@+id/course_mentor_email_editText" />


</androidx.constraintlayout.widget.ConstraintLayout>