<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".CoursesActivity">

    <TextView
        android:id="@+id/course_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/course_name"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter course name"
        android:inputType="textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/course_start"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@+id/course_name_label"
        app:layout_constraintTop_toBottomOf="@+id/course_name_label" />

    <TextView
        android:id="@+id/course_start_datepicker"
        android:layout_width="155dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:text="@string/select_date"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@+id/course_start_label"
        app:layout_constraintStart_toStartOf="@+id/course_name_editText"
        app:layout_constraintTop_toBottomOf="@+id/course_name_editText" />

    <TextView
        android:id="@+id/course_end_datepicker"
        android:layout_width="155dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:text="@string/select_date"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@+id/course_end_label"
        app:layout_constraintStart_toStartOf="@+id/course_start_datepicker"
        app:layout_constraintTop_toBottomOf="@+id/course_start_datepicker" />

    <TextView
        android:id="@+id/course_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/course_end"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@+id/course_start_label"
        app:layout_constraintTop_toBottomOf="@+id/course_start_label" />

    <Spinner
        android:id="@+id/term_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_end_datepicker" />

    <Spinner
        android:id="@+id/course_mentor_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term_spinner" />


</androidx.constraintlayout.widget.ConstraintLayout>